Refactoring processes